# btc_scrapper

./: Cargo.toml  README.md  docker-compose.yaml
CookieMonster/: Dockerfile
assets/: get_data.js
pg/migrations/: 20250725055016_prices.sql
src/: db.rs  main.rs  scrap.rs
